mern-project/k8s/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mern
  labels:
    app.kubernetes.io/part-of: mern-stack
